Fullstack/frontend/src/styles/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

/* Default Light Theme */
:root {
  --text: #0F1014;
  --lighttext: #444444;
  --inverttext: white;

  --background: #F4F4F6;
  --border: #d9d9d9;
  --card: white;
  --tintcard: #FCFCFD;
  --darkcard: #ebebeb;
  

  --button: #F5F5F5;

  --primary: #6971A9;
  --secondary: #C2B1CB;
  --lightsecondary: #E8E0EC;
  
  --accent: #b7bbd2;

  --primary-rgb: rgb(105 113 169);
  --secondary-rgb: rgb(194 177 203);
}

/* Dark Theme */
[data-theme="dark"] {
  --text: #eaeaea;
  --lighttext: #999999;
  --inverttext: black;
  
  --background: #181818;
  --border: #5c5c5c;
  --card: #313131;
  --darkcard: #3D3D3D;

  --button: #3c3c3c;

  --primary: #565d95;
  --secondary: #867491;
  --accent: #474f7b;
}

